[project]
name = "cuetools"
version = "0.1.5"
description = "Lightweight CUE sheet toolkit for Python"
authors = [
    {name = "Olezhich"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/Olezhich/CueLogic"
keywords = ["cue", "audio", "parser"]

requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
]

packages = [
    { include = "cuetools" }
]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = ["--cov=cuetools",
           "--log-cli-level=INFO"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
mypy = "^1.18.2"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
